Simple test for FileHandler. More SOLID with dataTypes we could process