@@ -1,3 +1,6 @@
+import filefilterutil.Options;
+import filefilterutil.DataSorter;
+import filefilterutil.FileHandler;
 import org.junit.jupiter.api.*;
 
 import java.io.File;
@@ -7,49 +10,52 @@ import java.nio.file.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-
 public class FileHandlerTest
 {
-    AppConfig config;
-    private FileHandler fileHandler;
-    private Path tempDir;
+    private Options _options;
+    private FileHandler _fileHandler;
+    private DataSorter _dataSorter;
+    private Path _tempDir;
 
     @BeforeEach
     public void setUp() throws IOException
     {
-        tempDir = Files.createTempDirectory("testOutput");
+        _tempDir = Files.createTempDirectory("testOutput");
 
-        config = new AppConfig();
-        config.setOutputPath(tempDir).setFilePrefix("test_").setAppendMode(false);
+        _options = new Options();
+        _options.setOutputPath(_tempDir).setFilePrefix("test_").setAppendMode(false);
 
-        fileHandler = new FileHandler(config);
+        _fileHandler = new FileHandler(_options);
+        _dataSorter = new DataSorter(_fileHandler);
     }
 
     @AfterEach
     public void tearDown() throws IOException
     {
-        fileHandler.closeAllWriters();
-        Files.walk(tempDir)
+        _fileHandler.closeAllWriters();
+        Files.walk(_tempDir)
                 .map(Path::toFile)
                 .forEach(File::delete);
+        Files.deleteIfExists(_tempDir);
     }
 
     @Test
     public void testWriteDataCreatesCorrectFiles() throws IOException
     {
-        String data1 = "10\n";
-        String data2 = "test_string\n";
+        String data1 = "10";
+        String data2 = "test_string";
 
-        fileHandler.writeData("integers", data1);
-        fileHandler.writeData("strings", data2);
+        _fileHandler.writeData("integer", data1);
+        _fileHandler.writeData("string", data2);
+        _fileHandler.closeAllWriters();
 
-        Path integersFile = tempDir.resolve("test_integers.txt");
-        Path stringsFile = tempDir.resolve("test_strings.txt");
+        Path integersFile = _tempDir.resolve("test_integer.txt");
+        Path stringsFile = _tempDir.resolve("test_string.txt");
 
-        assertTrue(Files.exists(integersFile), "Files for integers was created!");
-        assertTrue(Files.exists(stringsFile), "Files for strings was created!");
+        assertTrue(Files.exists(integersFile));
+        assertTrue(Files.exists(stringsFile));
 
-        //assertEquals(data1, Files.readAllLines(integersFile).get(0));
-        //assertEquals(data2, Files.readAllLines(stringsFile).get(0));
+        assertEquals(data1, Files.readAllLines(integersFile).getFirst());
+        assertEquals(data2, Files.readAllLines(stringsFile).getFirst());
     }
 }
